// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SourcesResultEntity > Error status 1`] = `
<body>
  <div>
    <div
      class="yc-label yc-label_theme_success yc-label_size_xs yc-label_type_default"
    >
      <div
        class="yc-label__text"
      >
        <div
          class="yc-label__content"
        >
          success
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="yc-label yc-label_theme_danger yc-label_size_xs yc-label_type_default"
    >
      <div
        class="yc-label__text"
      >
        <div
          class="yc-label__content"
        >
          error
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SourcesResultEntity > Success status 1`] = `
<body>
  <div>
    <div
      class="yc-label yc-label_theme_success yc-label_size_xs yc-label_type_default"
    >
      <div
        class="yc-label__text"
      >
        <div
          class="yc-label__content"
        >
          success
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`SourcesResultEntity > Without status 1`] = `
<body>
  <div>
    <div
      class="yc-label yc-label_theme_success yc-label_size_xs yc-label_type_default"
    >
      <div
        class="yc-label__text"
      >
        <div
          class="yc-label__content"
        >
          success
        </div>
      </div>
    </div>
  </div>
  <div>
    <div
      class="yc-label yc-label_theme_danger yc-label_size_xs yc-label_type_default"
    >
      <div
        class="yc-label__text"
      >
        <div
          class="yc-label__content"
        >
          error
        </div>
      </div>
    </div>
  </div>
  <div />
</body>
`;
